# osu-downloader

./: .gitignore  Cargo.toml  README.md
docs/: README-zh.md
downloader/: Cargo.toml
downloader/src/: main.rs
songs/: 1338910  1374773  1441409  1569120  1572674  550095  582432  650554  712414  728977  826088  982643  downloading.json
src/: backend.rs  download.rs  gui.rs  main.rs
src/backend/: download.rs  osu.rs
src/backend/download/: utils.rs
src/frontend/: gui.rs
src/gui/: components.rs
