[package]
name = "osu-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
rosu-v2 = "0.11.0"
indicatif = "0.18.3"
reqwest = { version = "0.13.1", default-features = false, features = ["native-tls"] }
futures-util = "0.3.31"
tokio = { version = "=1.48.0", features = ["full"] }
iced = { version = "0.12", features = ["tokio"] }
